sec1.css
.sec-1{
    display:flex;
    height:90vh;
    align-items:center;
    gap:60px;
}
.sec-1-1 {
    margin-left:100px;
}
.sec-1-1 img{
    width: 400px;
    border-radius: 50%;
}
.social img{
    width:50px;
    transition:all 0.3s ease;
    cursor: pointer;
}
.social img:hover{
    transform: scale(0.9);
}
.sec-1-2 {
    display:flex;
    flex-direction: column;
    gap: 15px;
}
.sec-1-2-1{
    font-weight:600;
    font-size: 25px;

}
.sec-1-2-3{
    font-weight:600;
    font-size: 30px;
}
p{
    font-size: 20px;
    width: 90%;
    line-height: 1.5;
    color: black;
    margin-top: 20px;
    gap: 10px;
}
h1{
    font-size:70px;
    color: lightblue;
    position:relative;
    z-index: 1;
}
.btns{
    margin-top: 20px;
    display: flex;
    gap: 20px;
}
.btns>:nth-child(1){
    padding: 30px;
    background-color:transparent;
    border-radius:20px;
    font-size:15px;
    font-weight: 600;
    border: 2px solid black;
    cursor: pointer;
    transition:all 0.3s ease;
}
.btns>:nth-child(1):hover{
    background-color: black;
    color: white;
}
.btns>:nth-child(2){
    padding: 10px 20px;
    background-color:black;
    border-radius:20px;
    font-size:15px;
    color:white;
    font-weight: 600;
    border: 2px solid black;
    cursor: pointer;
    transition:all 0.3s ease;
}
.btns>:nth-child(2):hover{
    background-color: lightblue;
    color: white;
    border-color: darkblue;

}
.social{
    display: flex;
    gap: 20px;
    margin-top: 20px;
    padding-bottom:150px;
}
@media(max-width:1024px){
    .sec-1{
        flex-direction:column;
        display:flex;
        height:100%;
        align-items:center;
        gap:60px;
        margin-bottom:50px;

    }
    p{
        text-align:center;
        width: 70%
    }
    .sec-1-1{
        margin-left: 0px;
    }
     .sec-1-1 img{
       width: 450px;
    }
    .sec-1-2{
        align-items:center;
        padding: 50px;
    }
}
@media(max-width:768px){
    .sec-1{
        flex-direction:column;
        display:flex;
        height: 90vh;
        align-items:center;
        gap: 60px;

    }
    p{
        text-align:center;
    }
    h1{
        font-size:40px;
    }
    .sec-1-1 img{
        width:300px;
    }
    .sec-1{
        margin-top: 50px;
    }
    .sec-1-2{
        align-items:center;
    }
}

